--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/image/realistic-burning-wheel-tyre-extreme-auto-sport-speed-poster_1284-12977.jpg">
     <link rel="stylesheet"  href="assets/boostrap/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/normalize.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/fontawesome-free-6.5.1-web/css/all.min.css">
+
+
     <title>DL Trade Center</title>
+
 </head>
 
 <body>
@@ -18,10 +24,11 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="#" id="cusbtn">Customer</a>
-                <a class="nav-link" href="#" id="itbtn">Item</a>
-                <a class="nav-link" href="#" id="odbtn">Order</a>
-                <a class="nav-link" href="#" id="oddbtn">Order Detail</a>
+                <a class="nav-link" href="index.html" id="homebtn">Home</a>
+                <a class="nav-link" href="customer.html" id="#container mt-5">Customer</a>
+                <a class="nav-link" href="item.html" id="#container mt-5">Item</a>
+                <a class="nav-link" href="order.html" id="#container-fluid">Order</a>
+                <a class="nav-link" href="orderdetail.html" id="container-fluid">Order Detail</a>
             </div>
         </div>
     </div>
@@ -34,7 +41,7 @@
             <div class="col-12  col-sm-6 d-flex justify-content-center align-items-center">
                 <span class="fw-bolder text-center" style="font-size:8em;color: black;">DL Trade Center </span>
             </div>
-            <div class="col-12  col-sm-6 shadow border border-5 rounded-5" style="background: url(https://img.freepik.com/free-photo/female-mechanic-fixing-car-wheels_23-2148327581.jpg?w=740);background-size:cover; background-position: center;"></div>
+            <div class="col-12  col-sm-6 shadow border border-5 rounded-5" style="background: url(https://img.freepik.com/free-photo/beautiful-smiling-woman-buying-oranges-supermarket-fruit-department_342744-1114.jpg?t=st=1714129600~exp=1714133200~hmac=74bc69114b294893c4e6af4c72ae1792959ad180b4b3c3ed2d073e8a7fa735e1&w=1800);background-size:cover; background-position: center;"></div>
         </div>
     </section>
 
@@ -532,9 +539,18 @@
     </div>
 </div>
 
+<script src="assets/boostrap/css/bootstrap.css"></script>
+<script src="assets/boostrap/css/bootstrap.rtl.css"></script>
+<script src="assets/boostrap/css/bootstrap-grid.css"></script>
+<script src="assets/boostrap/css/bootstrap-grid.rtl.css"></script>
+<script src="assets/boostrap/css/bootstrap-reboot.css"></script>
+<script src="assets/boostrap/css/bootstrap-reboot.rtl.css"></script>
+<script src="assets/boostrap/css/bootstrap-utilities.css"></script>
+<script src="assets/boostrap/css/bootstrap-utilities.rtl.css"></script>
 
 
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 </html>
