--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <!-- Document Title
     ============================================= -->
-    <title>SUN POS System</title>
+    <title>DL Trade Center</title>
 
     <!-- Favicon
    ============================================= -->
-    <link href="assets/images/img_1.png" rel="icon">
+    <link href="images/img_1.png" rel="icon">
 
     <!-- Stylesheets
    ============================================= -->
@@ -31,7 +31,7 @@
 
     <!-- fontawsome
    ============================================= -->
-    <link href="assets/fontawsome/css/all.min.css" rel="stylesheet">
+    <link href="assets/fontawesome-free-6.5.1-web" rel="stylesheet">
 
     <!-- Google font links
    ============================================= -->
@@ -45,9 +45,9 @@
 <!--/////////////navigation-bar/////////////-->
 <header id="navigation-bar">
     <!--nav bar-->
-    <nav class="navbar navbar-expand-lg z-1" style="background-color: #3B8AD3;">
+    <nav class="navbar navbar-expand-lg z-1" style="background-color: #0c2461;">
         <div class="container-fluid">
-            <img src="assets/images/img_1.png " width="3%">
+            <img src="images/cinematic-style-mall_23-2151551186.jpg " width="3%">
             <button aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"
                     class="navbar-toggler"
                     data-bs-target="#navbarText" data-bs-toggle="collapse" type="button">
@@ -76,7 +76,7 @@
 
                 <a onclick="logoutBtn()" style="user-select: none; text-decoration: none "> Logout &nbsp;<i
                         class="fa-solid fa-right-from-bracket"
-                        style="color: #ffffff;"></i>
+                        style="color: #0c2461;"></i>
                 </a>
 
             </div>
@@ -88,16 +88,16 @@
 <div class="row "
      style=" height: 100vh ; width: 100% ; position: absolute; top: 0; bottom: 0; left: 0; right: 0 ;
      margin: auto; z-index: -100;">
-    <div class="col-12 " style="height: 85%; background-color: white"></div>
-    <div class="col-12 " style="height: 15%; background: linear-gradient(to bottom, #81c3ff, white);"></div>
+    <div class="col-12 " style="height: 85%; background-color: #6a89cc"></div>
+    <div class="col-12 " style="height: 15%; background: linear-gradient(to bottom, #0c2461, #6a89cc);"></div>
 </div>
 
 <!--/////////////Login/////////////-->
 <section class=" position-absolute top-50 start-50 translate-middle bg-body w-25 " id="login" style="height: 60%">
 
     <section class="position-relative  w-100 h-50">
-        <img class="position-absolute start-50 top-50 translate-middle h-100 w-100" src="assets/images/img.png">
-        <img class="position-absolute start-50 top-50 translate-middle" src="assets/images/img_2.png" width="30%">
+        <img class="position-absolute start-50 top-50 translate-middle h-100 w-100" src="images/mall-america-scenes-cinematic-style_23-2151551211.avif">
+        <img class="position-absolute start-50 top-50 translate-middle" src="images/mall-america-scenes-cinematic-style_23-2151551211.avif" width="30%">
     </section>
 
     <section class="position-relative w-100 h-50">
@@ -125,19 +125,19 @@
     <section class="row z-0 w-75 h-25 position-absolute top-50 start-50 translate-middle"
              style="column-gap: 1%; row-gap: 5%">
         <button class="col btn btn-primary text-light " onclick="mngCustomer()">
-            <i class="fa-solid fa-user" style="color: #ffffff;"></i>
+            <i class="fa-solid fa-user" style="color:#1e3799;"></i>
             <br> Manage <br> Customer
         </button>
         <button class="col btn btn-primary text-light " onclick="mngStore()">
-            <i class="fa-solid fa-store" style="color: #ffffff;"></i>
+            <i class="fa-solid fa-store" style="color: #1e3799;"></i>
             <br> Manage <br> Store
         </button>
         <button class="col btn btn-primary text-light " onclick="mngOrder()">
-            <i class="fa-solid fa-border-all" style="color: #ffffff;"></i> <br>
+            <i class="fa-solid fa-border-all" style="color: #1e3799;"></i> <br>
             Manage <br> Orders
         </button>
         <button class="col btn btn-primary text-light " onclick="placeOrderForm()">
-            <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+            <i class="fa-solid fa-cart-shopping" style="color: white;"></i>
             <br>Place Order
         </button>
     </section>
@@ -178,7 +178,7 @@
 
             <!--///////////////////////////////////-->
             <section class="col-lg-4 col-12 vh-75 bg-body">
-                <div class="text-center mt-2 p-1" style="background-color: #0d6efd ; color:white;">
+                <div class="text-center mt-2 p-1" style="background-color: #0c2461; color:white;">
                     <i class="fa-solid fa-user" style="color: #ffffff;"></i>
                     Manage Customer
                 </div>
@@ -261,8 +261,8 @@
 
             <!--///////////////////////////////////-->
             <section class="col-lg-4 col-12 vh-75 bg-body">
-                <div class="text-center mt-2 p-1" style="background-color: #0d6efd ; color:white;">
-                    <i class="fa-solid fa-store" style="color: #ffffff;"></i>
+                <div class="text-center mt-2 p-1" style="background-color: #0c2461 ; color:white;">
+                    <i class="fa-solid fa-store" style="color: #0c2461;"></i>
                     Manage Store
                 </div>
                 <div>
@@ -354,7 +354,7 @@
                 </div>
 
                 <div class="container text-body-secondary border border-3 p-1">
-                    <div class="text-center  p-1" style="background-color: #0d6efd ; color:white;">
+                    <div class="text-center  p-1" style="background-color: #0c2461 ; color:white;">
                         Customer Details
                     </div>
 
@@ -381,7 +381,7 @@
             <!--///////////////////////////////////-->
             <div class=" col-lg-9  col-12 bg-body">
                 <div class="container text-body-secondary border border-3 p-1">
-                    <div class="text-center  p-1" style="background-color: #0d6efd ; color:white;">
+                    <div class="text-center  p-1" style="background-color: #0c2461 ; color:white;">
                         Item Details
                     </div>
 
