--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <section class=" position-absolute top-50 start-50 translate-middle bg-body w-25 " id="login" style="height: 60%">
 
     <section class="position-relative  w-100 h-50">
-        <img class="position-absolute start-50 top-50 translate-middle h-100 w-100" src="images/mall-america-scenes-cinematic-style_23-2151551211.avif">
+        <img class="position-absolute start-50 top-50 translate-middle h-100 w-100" src="images/DL Trade Center.png">
         <img class="position-absolute start-50 top-50 translate-middle" src="images/mall-america-scenes-cinematic-style_23-2151551211.avif" width="30%">
     </section>
 
